# churn-predictor

./: .gitignore  README.md  dev.yml  main.py  pyproject.toml  run_local.sh
api/: .dockerignore  Dockerfile  env_vars.py  inference.py  requirements.txt
api/models/: base.py  churn_predictor.py
data/: X.csv  preprocessing.py
mlops/: c_training.py  s3_tasks.py
src/: training.py
