[project]
name = "churn-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.1",
    "boto3",
    "catboost>=1.2.10",
    "fastapi>=0.136.1",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "pendulum>=3.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "requests",
    "streamlit",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
    "psycopg2-binary>=2.9.12",
    "asyncpg>=0.31.0",
]
